# PolygonLineValidator

./: CMakeLists.txt  README.md
execute/: main.cpp
geometry/LineSegment/: LineSegment.cpp  LineSegment.h
geometry/Point/: Point.cpp  Point.h
geometry/Polygon/: Polygon.cpp  Polygon.h
io/: Operations.cpp  Operations.h
src/execute/: main.cpp
src/geometry/LineSegment/: LineSegment.cpp
src/io/: Operations.cpp  Operations.h
src/test/presentation/: plot_results.py
test/: plot_results.py
test/input/: q1_example_input[516].txt  q1_input[514].txt
test/results/: q1_example_output[512].txt
visualization/: plot_results.py
